chore: update code quality workflow to check Prettier formatting and adjust scripts

--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "build": "tsc",
     "clean": "rm -rf dist",
     "dev": "tsc --watch",
-    "format": "prettier --write src",
-    "lint": "eslint . --fix",
+    "format": "prettier --check src",
+    "format:write": "prettier --write src",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "prepare": "husky",
     "test": "jest",
     "test:coverage": "jest --coverage",
