--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -22,8 +22,8 @@ jobs:
       - name: 📦 Install dependencies
         run: npm ci
 
-      - name: 🔍 Run ESLint
-        run: npm run lint
+      - name: 🔍 Check Prettier
+        run: npm run format
 
-      - name: 🎨 Check formatting with Prettier
-        run: npm run prettier:check
+      - name: 🎨 Check ESLint
+        run: npm run lint
